// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`parser function declarations does not allow type designators at end of name 1`] = `
Object {
  "errors": Array [
    [Error: Function name 'StringFunc#' cannot end with type designator '#'],
    [Error: Function name 'IntegerFunc%' cannot end with type designator '%'],
    [Error: Function name 'FloatFunc!' cannot end with type designator '!'],
    [Error: Function name 'DoubleFunc#' cannot end with type designator '#'],
  ],
  "statements": Array [
    Function {
      "func": Function {
        "body": Block {
          "location": Object {
            "end": Object {
              "column": 16,
              "line": 4,
            },
            "file": "",
            "start": Object {
              "column": 38,
              "line": 2,
            },
          },
          "statements": Array [
            Return {
              "tokens": Object {
                "return": Object {
                  "isReserved": true,
                  "kind": "Return",
                  "literal": undefined,
                  "location": Object {
                    "end": Object {
                      "column": 26,
                      "line": 3,
                    },
                    "file": "",
                    "start": Object {
                      "column": 20,
                      "line": 3,
                    },
                  },
                  "text": "return",
                },
              },
              "type": "Return",
              "value": Literal {
                "_location": Object {
                  "end": Object {
                    "column": 28,
                    "line": 3,
                  },
                  "file": "",
                  "start": Object {
                    "column": 27,
                    "line": 3,
                  },
                },
                "type": "Literal",
                "value": Int32 {
                  "kind": 4,
                  "value": 1,
                },
              },
            },
          ],
          "type": "Block",
        },
        "endKeyword": Object {
          "isReserved": false,
          "kind": "EndFunction",
          "literal": undefined,
          "location": Object {
            "end": Object {
              "column": 28,
              "line": 4,
            },
            "file": "",
            "start": Object {
              "column": 16,
              "line": 4,
            },
          },
          "text": "end function",
        },
        "keyword": Object {
          "isReserved": true,
          "kind": "Function",
          "literal": undefined,
          "location": Object {
            "end": Object {
              "column": 24,
              "line": 2,
            },
            "file": "",
            "start": Object {
              "column": 16,
              "line": 2,
            },
          },
          "text": "function",
        },
        "parameters": Array [],
        "returns": 10,
        "type": "Expr_Function",
      },
      "name": Object {
        "isReserved": false,
        "kind": "Identifier",
        "literal": undefined,
        "location": Object {
          "end": Object {
            "column": 36,
            "line": 2,
          },
          "file": "",
          "start": Object {
            "column": 25,
            "line": 2,
          },
        },
        "text": "StringFunc#",
      },
      "type": "Stmt_Function",
    },
    Function {
      "func": Function {
        "body": Block {
          "location": Object {
            "end": Object {
              "column": 16,
              "line": 8,
            },
            "file": "",
            "start": Object {
              "column": 39,
              "line": 6,
            },
          },
          "statements": Array [
            Return {
              "tokens": Object {
                "return": Object {
                  "isReserved": true,
                  "kind": "Return",
                  "literal": undefined,
                  "location": Object {
                    "end": Object {
                      "column": 26,
                      "line": 7,
                    },
                    "file": "",
                    "start": Object {
                      "column": 20,
                      "line": 7,
                    },
                  },
                  "text": "return",
                },
              },
              "type": "Return",
              "value": Literal {
                "_location": Object {
                  "end": Object {
                    "column": 28,
                    "line": 7,
                  },
                  "file": "",
                  "start": Object {
                    "column": 27,
                    "line": 7,
                  },
                },
                "type": "Literal",
                "value": Int32 {
                  "kind": 4,
                  "value": 1,
                },
              },
            },
          ],
          "type": "Block",
        },
        "endKeyword": Object {
          "isReserved": false,
          "kind": "EndFunction",
          "literal": undefined,
          "location": Object {
            "end": Object {
              "column": 28,
              "line": 8,
            },
            "file": "",
            "start": Object {
              "column": 16,
              "line": 8,
            },
          },
          "text": "end function",
        },
        "keyword": Object {
          "isReserved": true,
          "kind": "Function",
          "literal": undefined,
          "location": Object {
            "end": Object {
              "column": 24,
              "line": 6,
            },
            "file": "",
            "start": Object {
              "column": 16,
              "line": 6,
            },
          },
          "text": "function",
        },
        "parameters": Array [],
        "returns": 10,
        "type": "Expr_Function",
      },
      "name": Object {
        "isReserved": false,
        "kind": "Identifier",
        "literal": undefined,
        "location": Object {
          "end": Object {
            "column": 37,
            "line": 6,
          },
          "file": "",
          "start": Object {
            "column": 25,
            "line": 6,
          },
        },
        "text": "IntegerFunc%",
      },
      "type": "Stmt_Function",
    },
    Function {
      "func": Function {
        "body": Block {
          "location": Object {
            "end": Object {
              "column": 16,
              "line": 12,
            },
            "file": "",
            "start": Object {
              "column": 37,
              "line": 10,
            },
          },
          "statements": Array [
            Return {
              "tokens": Object {
                "return": Object {
                  "isReserved": true,
                  "kind": "Return",
                  "literal": undefined,
                  "location": Object {
                    "end": Object {
                      "column": 26,
                      "line": 11,
                    },
                    "file": "",
                    "start": Object {
                      "column": 20,
                      "line": 11,
                    },
                  },
                  "text": "return",
                },
              },
              "type": "Return",
              "value": Literal {
                "_location": Object {
                  "end": Object {
                    "column": 28,
                    "line": 11,
                  },
                  "file": "",
                  "start": Object {
                    "column": 27,
                    "line": 11,
                  },
                },
                "type": "Literal",
                "value": Int32 {
                  "kind": 4,
                  "value": 1,
                },
              },
            },
          ],
          "type": "Block",
        },
        "endKeyword": Object {
          "isReserved": false,
          "kind": "EndFunction",
          "literal": undefined,
          "location": Object {
            "end": Object {
              "column": 28,
              "line": 12,
            },
            "file": "",
            "start": Object {
              "column": 16,
              "line": 12,
            },
          },
          "text": "end function",
        },
        "keyword": Object {
          "isReserved": true,
          "kind": "Function",
          "literal": undefined,
          "location": Object {
            "end": Object {
              "column": 24,
              "line": 10,
            },
            "file": "",
            "start": Object {
              "column": 16,
              "line": 10,
            },
          },
          "text": "function",
        },
        "parameters": Array [],
        "returns": 10,
        "type": "Expr_Function",
      },
      "name": Object {
        "isReserved": false,
        "kind": "Identifier",
        "literal": undefined,
        "location": Object {
          "end": Object {
            "column": 35,
            "line": 10,
          },
          "file": "",
          "start": Object {
            "column": 25,
            "line": 10,
          },
        },
        "text": "FloatFunc!",
      },
      "type": "Stmt_Function",
    },
    Function {
      "func": Function {
        "body": Block {
          "location": Object {
            "end": Object {
              "column": 16,
              "line": 16,
            },
            "file": "",
            "start": Object {
              "column": 38,
              "line": 14,
            },
          },
          "statements": Array [
            Return {
              "tokens": Object {
                "return": Object {
                  "isReserved": true,
                  "kind": "Return",
                  "literal": undefined,
                  "location": Object {
                    "end": Object {
                      "column": 26,
                      "line": 15,
                    },
                    "file": "",
                    "start": Object {
                      "column": 20,
                      "line": 15,
                    },
                  },
                  "text": "return",
                },
              },
              "type": "Return",
              "value": Literal {
                "_location": Object {
                  "end": Object {
                    "column": 28,
                    "line": 15,
                  },
                  "file": "",
                  "start": Object {
                    "column": 27,
                    "line": 15,
                  },
                },
                "type": "Literal",
                "value": Int32 {
                  "kind": 4,
                  "value": 1,
                },
              },
            },
          ],
          "type": "Block",
        },
        "endKeyword": Object {
          "isReserved": false,
          "kind": "EndFunction",
          "literal": undefined,
          "location": Object {
            "end": Object {
              "column": 28,
              "line": 16,
            },
            "file": "",
            "start": Object {
              "column": 16,
              "line": 16,
            },
          },
          "text": "end function",
        },
        "keyword": Object {
          "isReserved": true,
          "kind": "Function",
          "literal": undefined,
          "location": Object {
            "end": Object {
              "column": 24,
              "line": 14,
            },
            "file": "",
            "start": Object {
              "column": 16,
              "line": 14,
            },
          },
          "text": "function",
        },
        "parameters": Array [],
        "returns": 10,
        "type": "Expr_Function",
      },
      "name": Object {
        "isReserved": false,
        "kind": "Identifier",
        "literal": undefined,
        "location": Object {
          "end": Object {
            "column": 36,
            "line": 14,
          },
          "file": "",
          "start": Object {
            "column": 25,
            "line": 14,
          },
        },
        "text": "DoubleFunc#",
      },
      "type": "Stmt_Function",
    },
  ],
}
`;

exports[`parser function declarations parses functions with default argument expressions 1`] = `
Array [
  Function {
    "func": Function {
      "body": Block {
        "location": Object {
          "end": Object {
            "column": -9,
            "line": -9,
          },
          "file": undefined,
          "start": Object {
            "column": -9,
            "line": -9,
          },
        },
        "statements": Array [],
        "type": "Block",
      },
      "endKeyword": Object {
        "isReserved": false,
        "kind": "EndFunction",
        "literal": undefined,
        "location": Object {
          "end": Object {
            "column": -9,
            "line": -9,
          },
          "start": Object {
            "column": -9,
            "line": -9,
          },
        },
        "text": "end function",
      },
      "keyword": Object {
        "isReserved": true,
        "kind": "Function",
        "literal": undefined,
        "location": Object {
          "end": Object {
            "column": -9,
            "line": -9,
          },
          "start": Object {
            "column": -9,
            "line": -9,
          },
        },
        "text": "function",
      },
      "parameters": Array [
        Object {
          "defaultValue": Literal {
            "_location": Object {
              "end": Object {
                "column": -9,
                "line": -9,
              },
              "start": Object {
                "column": -9,
                "line": -9,
              },
            },
            "type": "Literal",
            "value": Int32 {
              "kind": 4,
              "value": 3,
            },
          },
          "location": Object {
            "end": Object {
              "column": -9,
              "line": -9,
            },
            "file": undefined,
            "start": Object {
              "column": -9,
              "line": -9,
            },
          },
          "name": Object {
            "isReserved": false,
            "kind": "Identifier",
            "literal": undefined,
            "location": Object {
              "end": Object {
                "column": -9,
                "line": -9,
              },
              "start": Object {
                "column": -9,
                "line": -9,
              },
            },
            "text": "a",
          },
          "type": Object {
            "kind": 10,
            "location": Object {
              "end": Object {
                "column": -1,
                "line": -1,
              },
              "file": "(stdlib)",
              "start": Object {
                "column": -1,
                "line": -1,
              },
            },
          },
        },
        Object {
          "defaultValue": Literal {
            "_location": Object {
              "end": Object {
                "column": -9,
                "line": -9,
              },
              "start": Object {
                "column": -9,
                "line": -9,
              },
            },
            "type": "Literal",
            "value": Int32 {
              "kind": 4,
              "value": 4,
            },
          },
          "location": Object {
            "end": Object {
              "column": -9,
              "line": -9,
            },
            "file": undefined,
            "start": Object {
              "column": -9,
              "line": -9,
            },
          },
          "name": Object {
            "isReserved": false,
            "kind": "Identifier",
            "literal": undefined,
            "location": Object {
              "end": Object {
                "column": -9,
                "line": -9,
              },
              "start": Object {
                "column": -9,
                "line": -9,
              },
            },
            "text": "b",
          },
          "type": Object {
            "kind": 10,
            "location": Object {
              "end": Object {
                "column": -1,
                "line": -1,
              },
              "file": "(stdlib)",
              "start": Object {
                "column": -1,
                "line": -1,
              },
            },
          },
        },
        Object {
          "defaultValue": Binary {
            "left": Variable {
              "name": Object {
                "isReserved": false,
                "kind": "Identifier",
                "literal": undefined,
                "location": Object {
                  "end": Object {
                    "column": -9,
                    "line": -9,
                  },
                  "start": Object {
                    "column": -9,
                    "line": -9,
                  },
                },
                "text": "a",
              },
              "type": "Variable",
            },
            "right": Literal {
              "_location": Object {
                "end": Object {
                  "column": -9,
                  "line": -9,
                },
                "start": Object {
                  "column": -9,
                  "line": -9,
                },
              },
              "type": "Literal",
              "value": Int32 {
                "kind": 4,
                "value": 5,
              },
            },
            "token": Object {
              "isReserved": false,
              "kind": "Plus",
              "literal": undefined,
              "location": Object {
                "end": Object {
                  "column": -9,
                  "line": -9,
                },
                "start": Object {
                  "column": -9,
                  "line": -9,
                },
              },
              "text": "+",
            },
            "type": "Binary",
          },
          "location": Object {
            "end": Object {
              "column": -9,
              "line": -9,
            },
            "file": undefined,
            "start": Object {
              "column": -9,
              "line": -9,
            },
          },
          "name": Object {
            "isReserved": false,
            "kind": "Identifier",
            "literal": undefined,
            "location": Object {
              "end": Object {
                "column": -9,
                "line": -9,
              },
              "start": Object {
                "column": -9,
                "line": -9,
              },
            },
            "text": "c",
          },
          "type": Object {
            "kind": 10,
            "location": Object {
              "end": Object {
                "column": -1,
                "line": -1,
              },
              "file": "(stdlib)",
              "start": Object {
                "column": -1,
                "line": -1,
              },
            },
          },
        },
      ],
      "returns": 10,
      "type": "Expr_Function",
    },
    "name": Object {
      "isReserved": false,
      "kind": "Identifier",
      "literal": undefined,
      "location": Object {
        "end": Object {
          "column": -9,
          "line": -9,
        },
        "start": Object {
          "column": -9,
          "line": -9,
        },
      },
      "text": "add",
    },
    "type": "Stmt_Function",
  },
]
`;

exports[`parser function declarations parses functions with implicit-dynamic arguments 1`] = `
Array [
  Function {
    "func": Function {
      "body": Block {
        "location": Object {
          "end": Object {
            "column": -9,
            "line": -9,
          },
          "file": undefined,
          "start": Object {
            "column": -9,
            "line": -9,
          },
        },
        "statements": Array [],
        "type": "Block",
      },
      "endKeyword": Object {
        "isReserved": false,
        "kind": "EndFunction",
        "literal": undefined,
        "location": Object {
          "end": Object {
            "column": -9,
            "line": -9,
          },
          "start": Object {
            "column": -9,
            "line": -9,
          },
        },
        "text": "end function",
      },
      "keyword": Object {
        "isReserved": true,
        "kind": "Function",
        "literal": undefined,
        "location": Object {
          "end": Object {
            "column": -9,
            "line": -9,
          },
          "start": Object {
            "column": -9,
            "line": -9,
          },
        },
        "text": "function",
      },
      "parameters": Array [
        Object {
          "defaultValue": undefined,
          "location": Object {
            "end": Object {
              "column": -9,
              "line": -9,
            },
            "file": undefined,
            "start": Object {
              "column": -9,
              "line": -9,
            },
          },
          "name": Object {
            "isReserved": false,
            "kind": "Identifier",
            "literal": undefined,
            "location": Object {
              "end": Object {
                "column": -9,
                "line": -9,
              },
              "start": Object {
                "column": -9,
                "line": -9,
              },
            },
            "text": "a",
          },
          "type": Object {
            "kind": 10,
            "location": Object {
              "end": Object {
                "column": -1,
                "line": -1,
              },
              "file": "(stdlib)",
              "start": Object {
                "column": -1,
                "line": -1,
              },
            },
          },
        },
        Object {
          "defaultValue": undefined,
          "location": Object {
            "end": Object {
              "column": -9,
              "line": -9,
            },
            "file": undefined,
            "start": Object {
              "column": -9,
              "line": -9,
            },
          },
          "name": Object {
            "isReserved": false,
            "kind": "Identifier",
            "literal": undefined,
            "location": Object {
              "end": Object {
                "column": -9,
                "line": -9,
              },
              "start": Object {
                "column": -9,
                "line": -9,
              },
            },
            "text": "b",
          },
          "type": Object {
            "kind": 10,
            "location": Object {
              "end": Object {
                "column": -1,
                "line": -1,
              },
              "file": "(stdlib)",
              "start": Object {
                "column": -1,
                "line": -1,
              },
            },
          },
        },
      ],
      "returns": 10,
      "type": "Expr_Function",
    },
    "name": Object {
      "isReserved": false,
      "kind": "Identifier",
      "literal": undefined,
      "location": Object {
        "end": Object {
          "column": -9,
          "line": -9,
        },
        "start": Object {
          "column": -9,
          "line": -9,
        },
      },
      "text": "add2",
    },
    "type": "Stmt_Function",
  },
]
`;

exports[`parser function declarations parses functions with typed arguments 1`] = `
Array [
  Function {
    "func": Function {
      "body": Block {
        "location": Object {
          "end": Object {
            "column": -9,
            "line": -9,
          },
          "file": undefined,
          "start": Object {
            "column": -9,
            "line": -9,
          },
        },
        "statements": Array [],
        "type": "Block",
      },
      "endKeyword": Object {
        "isReserved": false,
        "kind": "EndFunction",
        "literal": undefined,
        "location": Object {
          "end": Object {
            "column": -9,
            "line": -9,
          },
          "start": Object {
            "column": -9,
            "line": -9,
          },
        },
        "text": "end function",
      },
      "keyword": Object {
        "isReserved": true,
        "kind": "Function",
        "literal": undefined,
        "location": Object {
          "end": Object {
            "column": -9,
            "line": -9,
          },
          "start": Object {
            "column": -9,
            "line": -9,
          },
        },
        "text": "function",
      },
      "parameters": Array [
        Object {
          "defaultValue": undefined,
          "location": Object {
            "end": Object {
              "column": -9,
              "line": -9,
            },
            "file": undefined,
            "start": Object {
              "column": -9,
              "line": -9,
            },
          },
          "name": Object {
            "isReserved": false,
            "kind": "Identifier",
            "literal": undefined,
            "location": Object {
              "end": Object {
                "column": -9,
                "line": -9,
              },
              "start": Object {
                "column": -9,
                "line": -9,
              },
            },
            "text": "str",
          },
          "type": Object {
            "kind": 3,
            "location": Object {
              "end": Object {
                "column": -9,
                "line": -9,
              },
              "start": Object {
                "column": -9,
                "line": -9,
              },
            },
          },
        },
        Object {
          "defaultValue": undefined,
          "location": Object {
            "end": Object {
              "column": -9,
              "line": -9,
            },
            "file": undefined,
            "start": Object {
              "column": -9,
              "line": -9,
            },
          },
          "name": Object {
            "isReserved": false,
            "kind": "Identifier",
            "literal": undefined,
            "location": Object {
              "end": Object {
                "column": -9,
                "line": -9,
              },
              "start": Object {
                "column": -9,
                "line": -9,
              },
            },
            "text": "count",
          },
          "type": Object {
            "kind": 4,
            "location": Object {
              "end": Object {
                "column": -9,
                "line": -9,
              },
              "start": Object {
                "column": -9,
                "line": -9,
              },
            },
          },
        },
      ],
      "returns": 10,
      "type": "Expr_Function",
    },
    "name": Object {
      "isReserved": false,
      "kind": "Identifier",
      "literal": undefined,
      "location": Object {
        "end": Object {
          "column": -9,
          "line": -9,
        },
        "start": Object {
          "column": -9,
          "line": -9,
        },
      },
      "text": "repeat",
    },
    "type": "Stmt_Function",
  },
]
`;

exports[`parser function declarations parses functions with typed arguments and default expressions 1`] = `
Array [
  Function {
    "func": Function {
      "body": Block {
        "location": Object {
          "end": Object {
            "column": -9,
            "line": -9,
          },
          "file": undefined,
          "start": Object {
            "column": -9,
            "line": -9,
          },
        },
        "statements": Array [],
        "type": "Block",
      },
      "endKeyword": Object {
        "isReserved": false,
        "kind": "EndFunction",
        "literal": undefined,
        "location": Object {
          "end": Object {
            "column": -9,
            "line": -9,
          },
          "start": Object {
            "column": -9,
            "line": -9,
          },
        },
        "text": "end function",
      },
      "keyword": Object {
        "isReserved": true,
        "kind": "Function",
        "literal": undefined,
        "location": Object {
          "end": Object {
            "column": -9,
            "line": -9,
          },
          "start": Object {
            "column": -9,
            "line": -9,
          },
        },
        "text": "function",
      },
      "parameters": Array [
        Object {
          "defaultValue": Literal {
            "_location": Object {
              "end": Object {
                "column": -9,
                "line": -9,
              },
              "start": Object {
                "column": -9,
                "line": -9,
              },
            },
            "type": "Literal",
            "value": Int32 {
              "kind": 4,
              "value": 3,
            },
          },
          "location": Object {
            "end": Object {
              "column": -9,
              "line": -9,
            },
            "file": undefined,
            "start": Object {
              "column": -9,
              "line": -9,
            },
          },
          "name": Object {
            "isReserved": false,
            "kind": "Identifier",
            "literal": undefined,
            "location": Object {
              "end": Object {
                "column": -9,
                "line": -9,
              },
              "start": Object {
                "column": -9,
                "line": -9,
              },
            },
            "text": "a",
          },
          "type": Object {
            "kind": 4,
            "location": Object {
              "end": Object {
                "column": -9,
                "line": -9,
              },
              "start": Object {
                "column": -9,
                "line": -9,
              },
            },
          },
        },
        Object {
          "defaultValue": Binary {
            "left": Variable {
              "name": Object {
                "isReserved": false,
                "kind": "Identifier",
                "literal": undefined,
                "location": Object {
                  "end": Object {
                    "column": -9,
                    "line": -9,
                  },
                  "start": Object {
                    "column": -9,
                    "line": -9,
                  },
                },
                "text": "a",
              },
              "type": "Variable",
            },
            "right": Literal {
              "_location": Object {
                "end": Object {
                  "column": -9,
                  "line": -9,
                },
                "start": Object {
                  "column": -9,
                  "line": -9,
                },
              },
              "type": "Literal",
              "value": Int32 {
                "kind": 4,
                "value": 5,
              },
            },
            "token": Object {
              "isReserved": false,
              "kind": "Plus",
              "literal": undefined,
              "location": Object {
                "end": Object {
                  "column": -9,
                  "line": -9,
                },
                "start": Object {
                  "column": -9,
                  "line": -9,
                },
              },
              "text": "+",
            },
            "type": "Binary",
          },
          "location": Object {
            "end": Object {
              "column": -9,
              "line": -9,
            },
            "file": undefined,
            "start": Object {
              "column": -9,
              "line": -9,
            },
          },
          "name": Object {
            "isReserved": false,
            "kind": "Identifier",
            "literal": undefined,
            "location": Object {
              "end": Object {
                "column": -9,
                "line": -9,
              },
              "start": Object {
                "column": -9,
                "line": -9,
              },
            },
            "text": "b",
          },
          "type": Object {
            "kind": 4,
            "location": Object {
              "end": Object {
                "column": -9,
                "line": -9,
              },
              "start": Object {
                "column": -9,
                "line": -9,
              },
            },
          },
        },
      ],
      "returns": 10,
      "type": "Expr_Function",
    },
    "name": Object {
      "isReserved": false,
      "kind": "Identifier",
      "literal": undefined,
      "location": Object {
        "end": Object {
          "column": -9,
          "line": -9,
        },
        "start": Object {
          "column": -9,
          "line": -9,
        },
      },
      "text": "add",
    },
    "type": "Stmt_Function",
  },
]
`;

exports[`parser function declarations parses minimal empty function declarations 1`] = `
Array [
  Function {
    "func": Function {
      "body": Block {
        "location": Object {
          "end": Object {
            "column": -9,
            "line": -9,
          },
          "file": undefined,
          "start": Object {
            "column": -9,
            "line": -9,
          },
        },
        "statements": Array [],
        "type": "Block",
      },
      "endKeyword": Object {
        "isReserved": false,
        "kind": "EndFunction",
        "literal": undefined,
        "location": Object {
          "end": Object {
            "column": -9,
            "line": -9,
          },
          "start": Object {
            "column": -9,
            "line": -9,
          },
        },
        "text": "end function",
      },
      "keyword": Object {
        "isReserved": true,
        "kind": "Function",
        "literal": undefined,
        "location": Object {
          "end": Object {
            "column": -9,
            "line": -9,
          },
          "start": Object {
            "column": -9,
            "line": -9,
          },
        },
        "text": "function",
      },
      "parameters": Array [],
      "returns": 10,
      "type": "Expr_Function",
    },
    "name": Object {
      "isReserved": false,
      "kind": "Identifier",
      "literal": undefined,
      "location": Object {
        "end": Object {
          "column": -9,
          "line": -9,
        },
        "start": Object {
          "column": -9,
          "line": -9,
        },
      },
      "text": "foo",
    },
    "type": "Stmt_Function",
  },
]
`;

exports[`parser function declarations parses non-empty function declarations 1`] = `
Array [
  Function {
    "func": Function {
      "body": Block {
        "location": Object {
          "end": Object {
            "column": -9,
            "line": -9,
          },
          "file": undefined,
          "start": Object {
            "column": -9,
            "line": -9,
          },
        },
        "statements": Array [
          Print {
            "expressions": Array [
              Literal {
                "_location": Object {
                  "end": Object {
                    "column": -9,
                    "line": -9,
                  },
                  "start": Object {
                    "column": -9,
                    "line": -9,
                  },
                },
                "type": "Literal",
                "value": BrsString {
                  "kind": 3,
                  "value": "Lorem ipsum",
                },
              },
            ],
            "tokens": Object {
              "print": Object {
                "isReserved": true,
                "kind": "Print",
                "literal": undefined,
                "location": Object {
                  "end": Object {
                    "column": -9,
                    "line": -9,
                  },
                  "start": Object {
                    "column": -9,
                    "line": -9,
                  },
                },
                "text": "print",
              },
            },
            "type": "Print",
          },
        ],
        "type": "Block",
      },
      "endKeyword": Object {
        "isReserved": false,
        "kind": "EndFunction",
        "literal": undefined,
        "location": Object {
          "end": Object {
            "column": -9,
            "line": -9,
          },
          "start": Object {
            "column": -9,
            "line": -9,
          },
        },
        "text": "end function",
      },
      "keyword": Object {
        "isReserved": true,
        "kind": "Function",
        "literal": undefined,
        "location": Object {
          "end": Object {
            "column": -9,
            "line": -9,
          },
          "start": Object {
            "column": -9,
            "line": -9,
          },
        },
        "text": "function",
      },
      "parameters": Array [],
      "returns": 10,
      "type": "Expr_Function",
    },
    "name": Object {
      "isReserved": false,
      "kind": "Identifier",
      "literal": undefined,
      "location": Object {
        "end": Object {
          "column": -9,
          "line": -9,
        },
        "start": Object {
          "column": -9,
          "line": -9,
        },
      },
      "text": "foo",
    },
    "type": "Stmt_Function",
  },
]
`;

exports[`parser function declarations parses return types 1`] = `
Array [
  Function {
    "func": Function {
      "body": Block {
        "location": Object {
          "end": Object {
            "column": -9,
            "line": -9,
          },
          "file": undefined,
          "start": Object {
            "column": -9,
            "line": -9,
          },
        },
        "statements": Array [],
        "type": "Block",
      },
      "endKeyword": Object {
        "isReserved": false,
        "kind": "EndFunction",
        "literal": undefined,
        "location": Object {
          "end": Object {
            "column": -9,
            "line": -9,
          },
          "start": Object {
            "column": -9,
            "line": -9,
          },
        },
        "text": "end function",
      },
      "keyword": Object {
        "isReserved": true,
        "kind": "Function",
        "literal": undefined,
        "location": Object {
          "end": Object {
            "column": -9,
            "line": -9,
          },
          "start": Object {
            "column": -9,
            "line": -9,
          },
        },
        "text": "function",
      },
      "parameters": Array [],
      "returns": 11,
      "type": "Expr_Function",
    },
    "name": Object {
      "isReserved": false,
      "kind": "Identifier",
      "literal": undefined,
      "location": Object {
        "end": Object {
          "column": -9,
          "line": -9,
        },
        "start": Object {
          "column": -9,
          "line": -9,
        },
      },
      "text": "foo",
    },
    "type": "Stmt_Function",
  },
]
`;

exports[`parser function declarations recovers when using \`end sub\` instead of \`end function\` 1`] = `
Object {
  "errors": Array [
    [Error: Expected 'end function' to terminate function block],
  ],
  "statements": Array [
    Function {
      "func": Function {
        "body": Block {
          "location": Object {
            "end": Object {
              "column": 16,
              "line": 4,
            },
            "file": "",
            "start": Object {
              "column": 31,
              "line": 2,
            },
          },
          "statements": Array [
            Print {
              "expressions": Array [
                Literal {
                  "_location": Object {
                    "end": Object {
                      "column": 39,
                      "line": 3,
                    },
                    "file": "",
                    "start": Object {
                      "column": 26,
                      "line": 3,
                    },
                  },
                  "type": "Literal",
                  "value": BrsString {
                    "kind": 3,
                    "value": "Hello world",
                  },
                },
              ],
              "tokens": Object {
                "print": Object {
                  "isReserved": true,
                  "kind": "Print",
                  "literal": undefined,
                  "location": Object {
                    "end": Object {
                      "column": 25,
                      "line": 3,
                    },
                    "file": "",
                    "start": Object {
                      "column": 20,
                      "line": 3,
                    },
                  },
                  "text": "print",
                },
              },
              "type": "Print",
            },
          ],
          "type": "Block",
        },
        "endKeyword": Object {
          "isReserved": false,
          "kind": "EndSub",
          "literal": undefined,
          "location": Object {
            "end": Object {
              "column": 23,
              "line": 4,
            },
            "file": "",
            "start": Object {
              "column": 16,
              "line": 4,
            },
          },
          "text": "end sub",
        },
        "keyword": Object {
          "isReserved": true,
          "kind": "Function",
          "literal": undefined,
          "location": Object {
            "end": Object {
              "column": 24,
              "line": 2,
            },
            "file": "",
            "start": Object {
              "column": 16,
              "line": 2,
            },
          },
          "text": "function",
        },
        "parameters": Array [],
        "returns": 10,
        "type": "Expr_Function",
      },
      "name": Object {
        "isReserved": false,
        "kind": "Identifier",
        "literal": undefined,
        "location": Object {
          "end": Object {
            "column": 29,
            "line": 2,
          },
          "file": "",
          "start": Object {
            "column": 25,
            "line": 2,
          },
        },
        "text": "Main",
      },
      "type": "Stmt_Function",
    },
    Function {
      "func": Function {
        "body": Block {
          "location": Object {
            "end": Object {
              "column": 16,
              "line": 8,
            },
            "file": "",
            "start": Object {
              "column": 33,
              "line": 6,
            },
          },
          "statements": Array [],
          "type": "Block",
        },
        "endKeyword": Object {
          "isReserved": false,
          "kind": "EndSub",
          "literal": undefined,
          "location": Object {
            "end": Object {
              "column": 23,
              "line": 8,
            },
            "file": "",
            "start": Object {
              "column": 16,
              "line": 8,
            },
          },
          "text": "end sub",
        },
        "keyword": Object {
          "isReserved": true,
          "kind": "Sub",
          "literal": undefined,
          "location": Object {
            "end": Object {
              "column": 19,
              "line": 6,
            },
            "file": "",
            "start": Object {
              "column": 16,
              "line": 6,
            },
          },
          "text": "sub",
        },
        "parameters": Array [],
        "returns": 11,
        "type": "Expr_Function",
      },
      "name": Object {
        "isReserved": false,
        "kind": "Identifier",
        "literal": undefined,
        "location": Object {
          "end": Object {
            "column": 31,
            "line": 6,
          },
          "file": "",
          "start": Object {
            "column": 20,
            "line": 6,
          },
        },
        "text": "DoSomething",
      },
      "type": "Stmt_Function",
    },
  ],
}
`;

exports[`parser sub declarations does not allow type designators at end of name 1`] = `
Object {
  "errors": Array [
    [Error: Function name 'StringSub#' cannot end with type designator '#'],
    [Error: Function name 'IntegerSub%' cannot end with type designator '%'],
    [Error: Function name 'FloatSub!' cannot end with type designator '!'],
    [Error: Function name 'DoubleSub#' cannot end with type designator '#'],
  ],
  "statements": Array [
    Function {
      "func": Function {
        "body": Block {
          "location": Object {
            "end": Object {
              "column": 16,
              "line": 3,
            },
            "file": "",
            "start": Object {
              "column": 32,
              "line": 2,
            },
          },
          "statements": Array [],
          "type": "Block",
        },
        "endKeyword": Object {
          "isReserved": false,
          "kind": "EndSub",
          "literal": undefined,
          "location": Object {
            "end": Object {
              "column": 23,
              "line": 3,
            },
            "file": "",
            "start": Object {
              "column": 16,
              "line": 3,
            },
          },
          "text": "end sub",
        },
        "keyword": Object {
          "isReserved": true,
          "kind": "Sub",
          "literal": undefined,
          "location": Object {
            "end": Object {
              "column": 19,
              "line": 2,
            },
            "file": "",
            "start": Object {
              "column": 16,
              "line": 2,
            },
          },
          "text": "sub",
        },
        "parameters": Array [],
        "returns": 11,
        "type": "Expr_Function",
      },
      "name": Object {
        "isReserved": false,
        "kind": "Identifier",
        "literal": undefined,
        "location": Object {
          "end": Object {
            "column": 30,
            "line": 2,
          },
          "file": "",
          "start": Object {
            "column": 20,
            "line": 2,
          },
        },
        "text": "StringSub#",
      },
      "type": "Stmt_Function",
    },
    Function {
      "func": Function {
        "body": Block {
          "location": Object {
            "end": Object {
              "column": 16,
              "line": 6,
            },
            "file": "",
            "start": Object {
              "column": 33,
              "line": 5,
            },
          },
          "statements": Array [],
          "type": "Block",
        },
        "endKeyword": Object {
          "isReserved": false,
          "kind": "EndSub",
          "literal": undefined,
          "location": Object {
            "end": Object {
              "column": 23,
              "line": 6,
            },
            "file": "",
            "start": Object {
              "column": 16,
              "line": 6,
            },
          },
          "text": "end sub",
        },
        "keyword": Object {
          "isReserved": true,
          "kind": "Sub",
          "literal": undefined,
          "location": Object {
            "end": Object {
              "column": 19,
              "line": 5,
            },
            "file": "",
            "start": Object {
              "column": 16,
              "line": 5,
            },
          },
          "text": "sub",
        },
        "parameters": Array [],
        "returns": 11,
        "type": "Expr_Function",
      },
      "name": Object {
        "isReserved": false,
        "kind": "Identifier",
        "literal": undefined,
        "location": Object {
          "end": Object {
            "column": 31,
            "line": 5,
          },
          "file": "",
          "start": Object {
            "column": 20,
            "line": 5,
          },
        },
        "text": "IntegerSub%",
      },
      "type": "Stmt_Function",
    },
    Function {
      "func": Function {
        "body": Block {
          "location": Object {
            "end": Object {
              "column": 16,
              "line": 9,
            },
            "file": "",
            "start": Object {
              "column": 31,
              "line": 8,
            },
          },
          "statements": Array [],
          "type": "Block",
        },
        "endKeyword": Object {
          "isReserved": false,
          "kind": "EndSub",
          "literal": undefined,
          "location": Object {
            "end": Object {
              "column": 23,
              "line": 9,
            },
            "file": "",
            "start": Object {
              "column": 16,
              "line": 9,
            },
          },
          "text": "end sub",
        },
        "keyword": Object {
          "isReserved": true,
          "kind": "Sub",
          "literal": undefined,
          "location": Object {
            "end": Object {
              "column": 19,
              "line": 8,
            },
            "file": "",
            "start": Object {
              "column": 16,
              "line": 8,
            },
          },
          "text": "sub",
        },
        "parameters": Array [],
        "returns": 11,
        "type": "Expr_Function",
      },
      "name": Object {
        "isReserved": false,
        "kind": "Identifier",
        "literal": undefined,
        "location": Object {
          "end": Object {
            "column": 29,
            "line": 8,
          },
          "file": "",
          "start": Object {
            "column": 20,
            "line": 8,
          },
        },
        "text": "FloatSub!",
      },
      "type": "Stmt_Function",
    },
    Function {
      "func": Function {
        "body": Block {
          "location": Object {
            "end": Object {
              "column": 16,
              "line": 12,
            },
            "file": "",
            "start": Object {
              "column": 32,
              "line": 11,
            },
          },
          "statements": Array [],
          "type": "Block",
        },
        "endKeyword": Object {
          "isReserved": false,
          "kind": "EndSub",
          "literal": undefined,
          "location": Object {
            "end": Object {
              "column": 23,
              "line": 12,
            },
            "file": "",
            "start": Object {
              "column": 16,
              "line": 12,
            },
          },
          "text": "end sub",
        },
        "keyword": Object {
          "isReserved": true,
          "kind": "Sub",
          "literal": undefined,
          "location": Object {
            "end": Object {
              "column": 19,
              "line": 11,
            },
            "file": "",
            "start": Object {
              "column": 16,
              "line": 11,
            },
          },
          "text": "sub",
        },
        "parameters": Array [],
        "returns": 11,
        "type": "Expr_Function",
      },
      "name": Object {
        "isReserved": false,
        "kind": "Identifier",
        "literal": undefined,
        "location": Object {
          "end": Object {
            "column": 30,
            "line": 11,
          },
          "file": "",
          "start": Object {
            "column": 20,
            "line": 11,
          },
        },
        "text": "DoubleSub#",
      },
      "type": "Stmt_Function",
    },
  ],
}
`;

exports[`parser sub declarations parses minimal sub declarations 1`] = `
Array [
  Function {
    "func": Function {
      "body": Block {
        "location": Object {
          "end": Object {
            "column": -9,
            "line": -9,
          },
          "file": undefined,
          "start": Object {
            "column": -9,
            "line": -9,
          },
        },
        "statements": Array [],
        "type": "Block",
      },
      "endKeyword": Object {
        "isReserved": false,
        "kind": "EndSub",
        "literal": undefined,
        "location": Object {
          "end": Object {
            "column": -9,
            "line": -9,
          },
          "start": Object {
            "column": -9,
            "line": -9,
          },
        },
        "text": "end sub",
      },
      "keyword": Object {
        "isReserved": true,
        "kind": "Sub",
        "literal": undefined,
        "location": Object {
          "end": Object {
            "column": -9,
            "line": -9,
          },
          "start": Object {
            "column": -9,
            "line": -9,
          },
        },
        "text": "sub",
      },
      "parameters": Array [],
      "returns": 11,
      "type": "Expr_Function",
    },
    "name": Object {
      "isReserved": false,
      "kind": "Identifier",
      "literal": undefined,
      "location": Object {
        "end": Object {
          "column": -9,
          "line": -9,
        },
        "start": Object {
          "column": -9,
          "line": -9,
        },
      },
      "text": "bar",
    },
    "type": "Stmt_Function",
  },
]
`;

exports[`parser sub declarations parses non-empty sub declarations 1`] = `
Array [
  Function {
    "func": Function {
      "body": Block {
        "location": Object {
          "end": Object {
            "column": -9,
            "line": -9,
          },
          "file": undefined,
          "start": Object {
            "column": -9,
            "line": -9,
          },
        },
        "statements": Array [
          Print {
            "expressions": Array [
              Literal {
                "_location": Object {
                  "end": Object {
                    "column": -9,
                    "line": -9,
                  },
                  "start": Object {
                    "column": -9,
                    "line": -9,
                  },
                },
                "type": "Literal",
                "value": BrsString {
                  "kind": 3,
                  "value": "Lorem ipsum",
                },
              },
            ],
            "tokens": Object {
              "print": Object {
                "isReserved": true,
                "kind": "Print",
                "literal": undefined,
                "location": Object {
                  "end": Object {
                    "column": -9,
                    "line": -9,
                  },
                  "start": Object {
                    "column": -9,
                    "line": -9,
                  },
                },
                "text": "print",
              },
            },
            "type": "Print",
          },
        ],
        "type": "Block",
      },
      "endKeyword": Object {
        "isReserved": false,
        "kind": "EndSub",
        "literal": undefined,
        "location": Object {
          "end": Object {
            "column": -9,
            "line": -9,
          },
          "start": Object {
            "column": -9,
            "line": -9,
          },
        },
        "text": "end sub",
      },
      "keyword": Object {
        "isReserved": true,
        "kind": "Sub",
        "literal": undefined,
        "location": Object {
          "end": Object {
            "column": -9,
            "line": -9,
          },
          "start": Object {
            "column": -9,
            "line": -9,
          },
        },
        "text": "sub",
      },
      "parameters": Array [],
      "returns": 11,
      "type": "Expr_Function",
    },
    "name": Object {
      "isReserved": false,
      "kind": "Identifier",
      "literal": undefined,
      "location": Object {
        "end": Object {
          "column": -9,
          "line": -9,
        },
        "start": Object {
          "column": -9,
          "line": -9,
        },
      },
      "text": "foo",
    },
    "type": "Stmt_Function",
  },
]
`;

exports[`parser sub declarations parses subs with default argument expressions 1`] = `
Array [
  Function {
    "func": Function {
      "body": Block {
        "location": Object {
          "end": Object {
            "column": -9,
            "line": -9,
          },
          "file": undefined,
          "start": Object {
            "column": -9,
            "line": -9,
          },
        },
        "statements": Array [],
        "type": "Block",
      },
      "endKeyword": Object {
        "isReserved": false,
        "kind": "EndSub",
        "literal": undefined,
        "location": Object {
          "end": Object {
            "column": -9,
            "line": -9,
          },
          "start": Object {
            "column": -9,
            "line": -9,
          },
        },
        "text": "end sub",
      },
      "keyword": Object {
        "isReserved": true,
        "kind": "Sub",
        "literal": undefined,
        "location": Object {
          "end": Object {
            "column": -9,
            "line": -9,
          },
          "start": Object {
            "column": -9,
            "line": -9,
          },
        },
        "text": "sub",
      },
      "parameters": Array [
        Object {
          "defaultValue": Literal {
            "_location": Object {
              "end": Object {
                "column": -9,
                "line": -9,
              },
              "start": Object {
                "column": -9,
                "line": -9,
              },
            },
            "type": "Literal",
            "value": Int32 {
              "kind": 4,
              "value": 3,
            },
          },
          "location": Object {
            "end": Object {
              "column": -9,
              "line": -9,
            },
            "file": undefined,
            "start": Object {
              "column": -9,
              "line": -9,
            },
          },
          "name": Object {
            "isReserved": false,
            "kind": "Identifier",
            "literal": undefined,
            "location": Object {
              "end": Object {
                "column": -9,
                "line": -9,
              },
              "start": Object {
                "column": -9,
                "line": -9,
              },
            },
            "text": "a",
          },
          "type": Object {
            "kind": 10,
            "location": Object {
              "end": Object {
                "column": -1,
                "line": -1,
              },
              "file": "(stdlib)",
              "start": Object {
                "column": -1,
                "line": -1,
              },
            },
          },
        },
        Object {
          "defaultValue": Literal {
            "_location": Object {
              "end": Object {
                "column": -9,
                "line": -9,
              },
              "start": Object {
                "column": -9,
                "line": -9,
              },
            },
            "type": "Literal",
            "value": Int32 {
              "kind": 4,
              "value": 4,
            },
          },
          "location": Object {
            "end": Object {
              "column": -9,
              "line": -9,
            },
            "file": undefined,
            "start": Object {
              "column": -9,
              "line": -9,
            },
          },
          "name": Object {
            "isReserved": false,
            "kind": "Identifier",
            "literal": undefined,
            "location": Object {
              "end": Object {
                "column": -9,
                "line": -9,
              },
              "start": Object {
                "column": -9,
                "line": -9,
              },
            },
            "text": "b",
          },
          "type": Object {
            "kind": 10,
            "location": Object {
              "end": Object {
                "column": -1,
                "line": -1,
              },
              "file": "(stdlib)",
              "start": Object {
                "column": -1,
                "line": -1,
              },
            },
          },
        },
        Object {
          "defaultValue": Binary {
            "left": Variable {
              "name": Object {
                "isReserved": false,
                "kind": "Identifier",
                "literal": undefined,
                "location": Object {
                  "end": Object {
                    "column": -9,
                    "line": -9,
                  },
                  "start": Object {
                    "column": -9,
                    "line": -9,
                  },
                },
                "text": "a",
              },
              "type": "Variable",
            },
            "right": Literal {
              "_location": Object {
                "end": Object {
                  "column": -9,
                  "line": -9,
                },
                "start": Object {
                  "column": -9,
                  "line": -9,
                },
              },
              "type": "Literal",
              "value": Int32 {
                "kind": 4,
                "value": 5,
              },
            },
            "token": Object {
              "isReserved": false,
              "kind": "Plus",
              "literal": undefined,
              "location": Object {
                "end": Object {
                  "column": -9,
                  "line": -9,
                },
                "start": Object {
                  "column": -9,
                  "line": -9,
                },
              },
              "text": "+",
            },
            "type": "Binary",
          },
          "location": Object {
            "end": Object {
              "column": -9,
              "line": -9,
            },
            "file": undefined,
            "start": Object {
              "column": -9,
              "line": -9,
            },
          },
          "name": Object {
            "isReserved": false,
            "kind": "Identifier",
            "literal": undefined,
            "location": Object {
              "end": Object {
                "column": -9,
                "line": -9,
              },
              "start": Object {
                "column": -9,
                "line": -9,
              },
            },
            "text": "c",
          },
          "type": Object {
            "kind": 10,
            "location": Object {
              "end": Object {
                "column": -1,
                "line": -1,
              },
              "file": "(stdlib)",
              "start": Object {
                "column": -1,
                "line": -1,
              },
            },
          },
        },
      ],
      "returns": 11,
      "type": "Expr_Function",
    },
    "name": Object {
      "isReserved": false,
      "kind": "Identifier",
      "literal": undefined,
      "location": Object {
        "end": Object {
          "column": -9,
          "line": -9,
        },
        "start": Object {
          "column": -9,
          "line": -9,
        },
      },
      "text": "add",
    },
    "type": "Stmt_Function",
  },
]
`;

exports[`parser sub declarations parses subs with implicit-dynamic arguments 1`] = `
Array [
  Function {
    "func": Function {
      "body": Block {
        "location": Object {
          "end": Object {
            "column": -9,
            "line": -9,
          },
          "file": undefined,
          "start": Object {
            "column": -9,
            "line": -9,
          },
        },
        "statements": Array [],
        "type": "Block",
      },
      "endKeyword": Object {
        "isReserved": false,
        "kind": "EndFunction",
        "literal": undefined,
        "location": Object {
          "end": Object {
            "column": -9,
            "line": -9,
          },
          "start": Object {
            "column": -9,
            "line": -9,
          },
        },
        "text": "end sub",
      },
      "keyword": Object {
        "isReserved": true,
        "kind": "Function",
        "literal": undefined,
        "location": Object {
          "end": Object {
            "column": -9,
            "line": -9,
          },
          "start": Object {
            "column": -9,
            "line": -9,
          },
        },
        "text": "sub",
      },
      "parameters": Array [
        Object {
          "defaultValue": undefined,
          "location": Object {
            "end": Object {
              "column": -9,
              "line": -9,
            },
            "file": undefined,
            "start": Object {
              "column": -9,
              "line": -9,
            },
          },
          "name": Object {
            "isReserved": false,
            "kind": "Identifier",
            "literal": undefined,
            "location": Object {
              "end": Object {
                "column": -9,
                "line": -9,
              },
              "start": Object {
                "column": -9,
                "line": -9,
              },
            },
            "text": "a",
          },
          "type": Object {
            "kind": 10,
            "location": Object {
              "end": Object {
                "column": -1,
                "line": -1,
              },
              "file": "(stdlib)",
              "start": Object {
                "column": -1,
                "line": -1,
              },
            },
          },
        },
        Object {
          "defaultValue": undefined,
          "location": Object {
            "end": Object {
              "column": -9,
              "line": -9,
            },
            "file": undefined,
            "start": Object {
              "column": -9,
              "line": -9,
            },
          },
          "name": Object {
            "isReserved": false,
            "kind": "Identifier",
            "literal": undefined,
            "location": Object {
              "end": Object {
                "column": -9,
                "line": -9,
              },
              "start": Object {
                "column": -9,
                "line": -9,
              },
            },
            "text": "b",
          },
          "type": Object {
            "kind": 10,
            "location": Object {
              "end": Object {
                "column": -1,
                "line": -1,
              },
              "file": "(stdlib)",
              "start": Object {
                "column": -1,
                "line": -1,
              },
            },
          },
        },
      ],
      "returns": 10,
      "type": "Expr_Function",
    },
    "name": Object {
      "isReserved": false,
      "kind": "Identifier",
      "literal": undefined,
      "location": Object {
        "end": Object {
          "column": -9,
          "line": -9,
        },
        "start": Object {
          "column": -9,
          "line": -9,
        },
      },
      "text": "add2",
    },
    "type": "Stmt_Function",
  },
]
`;

exports[`parser sub declarations parses subs with typed arguments 1`] = `
Array [
  Function {
    "func": Function {
      "body": Block {
        "location": Object {
          "end": Object {
            "column": -9,
            "line": -9,
          },
          "file": undefined,
          "start": Object {
            "column": -9,
            "line": -9,
          },
        },
        "statements": Array [],
        "type": "Block",
      },
      "endKeyword": Object {
        "isReserved": false,
        "kind": "EndFunction",
        "literal": undefined,
        "location": Object {
          "end": Object {
            "column": -9,
            "line": -9,
          },
          "start": Object {
            "column": -9,
            "line": -9,
          },
        },
        "text": "end sub",
      },
      "keyword": Object {
        "isReserved": true,
        "kind": "Function",
        "literal": undefined,
        "location": Object {
          "end": Object {
            "column": -9,
            "line": -9,
          },
          "start": Object {
            "column": -9,
            "line": -9,
          },
        },
        "text": "sub",
      },
      "parameters": Array [
        Object {
          "defaultValue": undefined,
          "location": Object {
            "end": Object {
              "column": -9,
              "line": -9,
            },
            "file": undefined,
            "start": Object {
              "column": -9,
              "line": -9,
            },
          },
          "name": Object {
            "isReserved": false,
            "kind": "Identifier",
            "literal": undefined,
            "location": Object {
              "end": Object {
                "column": -9,
                "line": -9,
              },
              "start": Object {
                "column": -9,
                "line": -9,
              },
            },
            "text": "str",
          },
          "type": Object {
            "kind": 3,
            "location": Object {
              "end": Object {
                "column": -9,
                "line": -9,
              },
              "start": Object {
                "column": -9,
                "line": -9,
              },
            },
          },
        },
        Object {
          "defaultValue": undefined,
          "location": Object {
            "end": Object {
              "column": -9,
              "line": -9,
            },
            "file": undefined,
            "start": Object {
              "column": -9,
              "line": -9,
            },
          },
          "name": Object {
            "isReserved": false,
            "kind": "Identifier",
            "literal": undefined,
            "location": Object {
              "end": Object {
                "column": -9,
                "line": -9,
              },
              "start": Object {
                "column": -9,
                "line": -9,
              },
            },
            "text": "count",
          },
          "type": Object {
            "kind": 4,
            "location": Object {
              "end": Object {
                "column": -9,
                "line": -9,
              },
              "start": Object {
                "column": -9,
                "line": -9,
              },
            },
          },
        },
      ],
      "returns": 10,
      "type": "Expr_Function",
    },
    "name": Object {
      "isReserved": false,
      "kind": "Identifier",
      "literal": undefined,
      "location": Object {
        "end": Object {
          "column": -9,
          "line": -9,
        },
        "start": Object {
          "column": -9,
          "line": -9,
        },
      },
      "text": "repeat",
    },
    "type": "Stmt_Function",
  },
]
`;

exports[`parser sub declarations parses subs with typed arguments and default expressions 1`] = `
Array [
  Function {
    "func": Function {
      "body": Block {
        "location": Object {
          "end": Object {
            "column": -9,
            "line": -9,
          },
          "file": undefined,
          "start": Object {
            "column": -9,
            "line": -9,
          },
        },
        "statements": Array [],
        "type": "Block",
      },
      "endKeyword": Object {
        "isReserved": false,
        "kind": "EndSub",
        "literal": undefined,
        "location": Object {
          "end": Object {
            "column": -9,
            "line": -9,
          },
          "start": Object {
            "column": -9,
            "line": -9,
          },
        },
        "text": "end sub",
      },
      "keyword": Object {
        "isReserved": true,
        "kind": "Sub",
        "literal": undefined,
        "location": Object {
          "end": Object {
            "column": -9,
            "line": -9,
          },
          "start": Object {
            "column": -9,
            "line": -9,
          },
        },
        "text": "sub",
      },
      "parameters": Array [
        Object {
          "defaultValue": Literal {
            "_location": Object {
              "end": Object {
                "column": -9,
                "line": -9,
              },
              "start": Object {
                "column": -9,
                "line": -9,
              },
            },
            "type": "Literal",
            "value": Int32 {
              "kind": 4,
              "value": 3,
            },
          },
          "location": Object {
            "end": Object {
              "column": -9,
              "line": -9,
            },
            "file": undefined,
            "start": Object {
              "column": -9,
              "line": -9,
            },
          },
          "name": Object {
            "isReserved": false,
            "kind": "Identifier",
            "literal": undefined,
            "location": Object {
              "end": Object {
                "column": -9,
                "line": -9,
              },
              "start": Object {
                "column": -9,
                "line": -9,
              },
            },
            "text": "a",
          },
          "type": Object {
            "kind": 4,
            "location": Object {
              "end": Object {
                "column": -9,
                "line": -9,
              },
              "start": Object {
                "column": -9,
                "line": -9,
              },
            },
          },
        },
        Object {
          "defaultValue": Binary {
            "left": Variable {
              "name": Object {
                "isReserved": false,
                "kind": "Identifier",
                "literal": undefined,
                "location": Object {
                  "end": Object {
                    "column": -9,
                    "line": -9,
                  },
                  "start": Object {
                    "column": -9,
                    "line": -9,
                  },
                },
                "text": "a",
              },
              "type": "Variable",
            },
            "right": Literal {
              "_location": Object {
                "end": Object {
                  "column": -9,
                  "line": -9,
                },
                "start": Object {
                  "column": -9,
                  "line": -9,
                },
              },
              "type": "Literal",
              "value": Int32 {
                "kind": 4,
                "value": 5,
              },
            },
            "token": Object {
              "isReserved": false,
              "kind": "Plus",
              "literal": undefined,
              "location": Object {
                "end": Object {
                  "column": -9,
                  "line": -9,
                },
                "start": Object {
                  "column": -9,
                  "line": -9,
                },
              },
              "text": "+",
            },
            "type": "Binary",
          },
          "location": Object {
            "end": Object {
              "column": -9,
              "line": -9,
            },
            "file": undefined,
            "start": Object {
              "column": -9,
              "line": -9,
            },
          },
          "name": Object {
            "isReserved": false,
            "kind": "Identifier",
            "literal": undefined,
            "location": Object {
              "end": Object {
                "column": -9,
                "line": -9,
              },
              "start": Object {
                "column": -9,
                "line": -9,
              },
            },
            "text": "b",
          },
          "type": Object {
            "kind": 4,
            "location": Object {
              "end": Object {
                "column": -9,
                "line": -9,
              },
              "start": Object {
                "column": -9,
                "line": -9,
              },
            },
          },
        },
      ],
      "returns": 11,
      "type": "Expr_Function",
    },
    "name": Object {
      "isReserved": false,
      "kind": "Identifier",
      "literal": undefined,
      "location": Object {
        "end": Object {
          "column": -9,
          "line": -9,
        },
        "start": Object {
          "column": -9,
          "line": -9,
        },
      },
      "text": "add",
    },
    "type": "Stmt_Function",
  },
]
`;

exports[`parser sub declarations recovers when using \`end function\` instead of \`end sub\` 1`] = `
Object {
  "errors": Array [
    [Error: Expected 'end sub' to terminate sub block],
  ],
  "statements": Array [
    Function {
      "func": Function {
        "body": Block {
          "location": Object {
            "end": Object {
              "column": 16,
              "line": 4,
            },
            "file": "",
            "start": Object {
              "column": 26,
              "line": 2,
            },
          },
          "statements": Array [
            Print {
              "expressions": Array [
                Literal {
                  "_location": Object {
                    "end": Object {
                      "column": 39,
                      "line": 3,
                    },
                    "file": "",
                    "start": Object {
                      "column": 26,
                      "line": 3,
                    },
                  },
                  "type": "Literal",
                  "value": BrsString {
                    "kind": 3,
                    "value": "Hello world",
                  },
                },
              ],
              "tokens": Object {
                "print": Object {
                  "isReserved": true,
                  "kind": "Print",
                  "literal": undefined,
                  "location": Object {
                    "end": Object {
                      "column": 25,
                      "line": 3,
                    },
                    "file": "",
                    "start": Object {
                      "column": 20,
                      "line": 3,
                    },
                  },
                  "text": "print",
                },
              },
              "type": "Print",
            },
          ],
          "type": "Block",
        },
        "endKeyword": Object {
          "isReserved": false,
          "kind": "EndFunction",
          "literal": undefined,
          "location": Object {
            "end": Object {
              "column": 28,
              "line": 4,
            },
            "file": "",
            "start": Object {
              "column": 16,
              "line": 4,
            },
          },
          "text": "end function",
        },
        "keyword": Object {
          "isReserved": true,
          "kind": "Sub",
          "literal": undefined,
          "location": Object {
            "end": Object {
              "column": 19,
              "line": 2,
            },
            "file": "",
            "start": Object {
              "column": 16,
              "line": 2,
            },
          },
          "text": "sub",
        },
        "parameters": Array [],
        "returns": 11,
        "type": "Expr_Function",
      },
      "name": Object {
        "isReserved": false,
        "kind": "Identifier",
        "literal": undefined,
        "location": Object {
          "end": Object {
            "column": 24,
            "line": 2,
          },
          "file": "",
          "start": Object {
            "column": 20,
            "line": 2,
          },
        },
        "text": "Main",
      },
      "type": "Stmt_Function",
    },
    Function {
      "func": Function {
        "body": Block {
          "location": Object {
            "end": Object {
              "column": 16,
              "line": 8,
            },
            "file": "",
            "start": Object {
              "column": 33,
              "line": 6,
            },
          },
          "statements": Array [],
          "type": "Block",
        },
        "endKeyword": Object {
          "isReserved": false,
          "kind": "EndSub",
          "literal": undefined,
          "location": Object {
            "end": Object {
              "column": 23,
              "line": 8,
            },
            "file": "",
            "start": Object {
              "column": 16,
              "line": 8,
            },
          },
          "text": "end sub",
        },
        "keyword": Object {
          "isReserved": true,
          "kind": "Sub",
          "literal": undefined,
          "location": Object {
            "end": Object {
              "column": 19,
              "line": 6,
            },
            "file": "",
            "start": Object {
              "column": 16,
              "line": 6,
            },
          },
          "text": "sub",
        },
        "parameters": Array [],
        "returns": 11,
        "type": "Expr_Function",
      },
      "name": Object {
        "isReserved": false,
        "kind": "Identifier",
        "literal": undefined,
        "location": Object {
          "end": Object {
            "column": 31,
            "line": 6,
          },
          "file": "",
          "start": Object {
            "column": 20,
            "line": 6,
          },
        },
        "text": "DoSomething",
      },
      "type": "Stmt_Function",
    },
  ],
}
`;
